examples/test/testpolicy15247.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy15247
  namespace: namespace103
spec:
  podSelector:
    matchLabels:
      key34: value38
      key15: value36
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key43: value15
          key23: value10
          key34: value48
      podSelector:
        matchLabels:
          key5: value49
          key20: value6
